Cleaning up some types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["server/**/*.ts","types.d.ts"]
+  "include": ["server/**/*.ts"]
 }
